# claude-skillpack

./: .gitignore  AUDIT_DELIVERY.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-dist.yml  ci.yml  skill-lint.yml
core/claude-code-standard/: SKILL.md
core/claude-token-watchdog/: SKILL.md
core/token-control/: SKILL.md
cross-platform/: AGENTS.md  README.md  chatgpt-watchdog.md
evaluation/: EVAL_PLAN.md
scripts/: add_compatibility_section.py  add_token_control_to_readme.py  convert_badges_to_html.py  convert_tables_to_html.py  pad_badge_labels.py  revert_to_natural_widths.py  update_readme_for_watchdog.py
shared/ai-pattern-scrubber/: SPEC.md
shared/humanizer-flow/: SKILL_TEMPLATE.md
shared/nick-mode-writing-standard/: README.md
shared/scholar-editor/: IMPLEMENTATION_NOTES.md  SPEC.md  mock_detector.py  rubric.json
shared/sql-data-gotcha-pack/: SKILL.md  gotchas.json  sql_data_gotcha.py
skills/ai-pattern-scrubber/: SKILL.md
skills/correction-email-writer/: SKILL.md
skills/cover-letter-writer/: SKILL.md
skills/data-integrity-investigator/: SKILL.md
skills/email-writer/: SKILL.md
skills/executive-brief-writer/: SKILL.md
skills/executive-summary-writer/: SKILL.md
skills/incident-summary-writer/: SKILL.md
skills/kpi-definition-governance/: SKILL.md
skills/resume-editor/: SKILL.md
tests/: fixtures.jsonl  test_claude_token_watchdog.py  test_scholar_editor.py  test_token_control.py
tools/: build_all.py  check_gotcha_coverage.py  check_pattern_coverage.py  package_skill.py  skill_linter.py
(+19 files in other folders)
